--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^12.4.0",
     "framer-motion": "^12.23.11",
     "intersection-observer": "^0.12.2",
     "lucide-react": "^0.344.0",
