--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "country-state-city": "^3.2.1",
     "firebase": "^12.4.0",
     "framer-motion": "^12.23.11",
     "intersection-observer": "^0.12.2",
@@ -17,6 +18,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.6.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.30.1",
     "swiper": "^11.2.10"
   },
