--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^12.23.11",
     "intersection-observer": "^0.12.2",
     "lucide-react": "^0.344.0",
+    "next": "^16.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.6.0",
